# C-IDE

./: CMakeLists.txt  Doxyfile  README.md
build-untitled-Desktop-Debug/: Makefile  moc_ide.cpp  ui_ide.h  untitled
doc/html/: annotated.html  class_cliente-members.html  class_cliente.html  class_collector-members.html  class_collector.html  class_collector__coll__graph.dot  class_list-members.html  class_list.html  class_list__coll__graph.dot  class_node-members.html  class_node.html  class_node__coll__graph.dot  classcreador_listas-members.html  classcreador_listas.html  classes.html  classide-members.html  classide.html  classide__coll__graph.dot  classlogger-members.html  classlogger.html  classnlohmann_1_1basic__json-members.html  classnlohmann_1_1basic__json.html  classnlohmann_1_1byte__container__with__subtype-members.html  classnlohmann_1_1byte__container__with__subtype.html  classnlohmann_1_1detail_1_1binary__reader-members.html  classnlohmann_1_1detail_1_1binary__reader.html  classnlohmann_1_1detail_1_1binary__writer-members.html  classnlohmann_1_1detail_1_1binary__writer.html  classnlohmann_1_1detail_1_1exception-members.html  classnlohmann_1_1detail_1_1exception.html  classnlohmann_1_1detail_1_1exception__coll__graph.dot  classnlohmann_1_1detail_1_1file__input__adapter.html  (+402 more)
untitled/: Cliente.cpp  Doxyfile  arigmetica.cpp  creadorListas.cpp  example.txt  ide.cpp  ide.h  ide.ui  logger.cpp  main.cpp  mclient  mclient.cpp  mserver  mserver.cpp  operaciones.cpp  operacionesEstructs.cpp  pruebas.cpp  test  test.cpp  test2  test2.cpp  untitled.pro  variables.json
(+347 files in other folders)
